--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                     <li>C#</li>
                                     <li>JavaScript</li>
                                     <li>Postgresql</li>
-                                    
+                                    <li>Git</li>
                                 </ul>
                             </div>
                             <div class="part-2">
@@ -54,7 +54,7 @@
                                     <li>MS SQL</li>
                                     <li>HTML</li>
                                     <li>CSS</li>
-                                    <li>Git</li>
+                                    <li>Bootstrap</li>
                                 </ul>
                             </div>
                         </div>
