Project list changed

--- a/index.html
+++ b/index.html
@@ -44,16 +44,21 @@
                             <div class="part-1">
                                 <ul class="skills">
                                     <li>C#</li>
-                                    <li>JavaScript</li>
+                                    <li>WPF</li>
+                                    <li>ASP.NET Core</li>
+                                    <li>ASP.NET MVC</li>
                                     <li>Postgresql</li>
-                                    <li>Git</li>
+                                    <li>MS SQL</li>
                                 </ul>
                             </div>
                             <div class="part-2">
                                 <ul class="skills">
-                                    <li>MS SQL</li>
+                                    <li>Git</li>
+                                    <li>Docker</li>
+                                    <li>Angular</li>
                                     <li>HTML</li>
                                     <li>CSS</li>
+                                    <li>JavaScript</li>
                                     <li>Bootstrap</li>
                                 </ul>
                             </div>
@@ -76,17 +81,17 @@
                             
                         </div>
                         </div>
-                        <div class="project-card" onclick="window.open('https://github.com/toughtcrime/MoneyManager','_newtab')">
+                        <div class="project-card" onclick="window.open('https://github.com/toughtcrime/Notes','_newtab')">
                             <div class="wrapper">
                              
                             <div class="project-title"> 
-                                <a class="project-link" href="https://github.com/toughtcrime/MoneyManager">
+                                <a class="project-link" href="https://github.com/toughtcrime/Notes">
                                     MoneyManager
                                     <i class="fa-solid fa-dollar-sign"></i>
                                 </a>
                             </div>
                             <div class="project-body">
-                                <p class="project-description">Backend for finance management. Project is not finished yet.</p>
+                                <p class="project-description">Backend for note management. Project is not finished yet.</p>
                             </div>
                         </div>
                         </div>
