--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                              
                             <div class="project-title"> 
                                 <a class="project-link" href="https://github.com/toughtcrime/Notes">
-                                    MoneyManager
+                                    NotesApp
                                     <i class="fa-solid fa-dollar-sign"></i>
                                 </a>
                             </div>
