--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="./css/media.css">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     <title>Portfolio</title>
 </head>
 <body>
-        <section class="AboutMe-section">
+        <section class="sect AboutMe-section">
             <div class="start-text-info hidden">
                 <p class="greeting" id="greet-type"><span class="">Hello,name is</p>
                 <h3 class="info-name" id="name-type">Vladyslav Hlovatskyi</h3>
@@ -24,7 +25,7 @@
                 </div>
             </div>
         </section>
-        <section class="skills-section ">
+        <section class="skills-section sect ">
             <div class="wrapper hidden">
                 <div class="section-title">
                     <h2>Skills</h2>
@@ -36,7 +37,7 @@
 
         </section>
 
-        <section class="project-section ">
+        <section class="project-section">
             <div class="wrapper hidden">
                 <div class="section-title">
                     <h2>My Projects</h2>
