--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <p class="info-descitpion" id="desc-type">I'm  Junior .NET Developer/></p>
     
                 <div class="special-info">
-                    <p class="job">Currently I'm looking for a job, so if you interested in my candidature you can check out my pet projects on Github profile  </p>
+                    <p class="job">Currently I'm looking for a job, so if you interested in my candydacy you can check out my pet projects on Github profile  </p>
                     <a href="https://github.com/toughtcrime" class="social-link" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
                         Github</a>
                 </div>
